# CPP

Projects/Games/: CMakeLists.txt
Projects/Games/CounterStrike/: CMakeLists.txt
Projects/Games/CounterStrike/Pistols/: DesertEagle.cpp  DesertEagle.hpp  Glock.cpp  Glock.hpp  Pistol.cpp  Pistol.hpp  PistolFactory.cpp  PistolFactory.hpp
Projects/Games/CounterStrike/include/: Defines.hpp  Player.hpp
Projects/Games/CounterStrike/src/: Player.cpp  main.cpp
Projects/Games/RGBTask/: CMakeLists.txt
Projects/Games/RGBTask/include/: LongestSequenceProcessor.hpp
Projects/Games/RGBTask/lib/: longest_sequence_lib.c  longest_sequence_lib.h
Projects/Games/RGBTask/src/: LongestSequenceProcessor.cpp  RGBTask.cpp  RGBTask.py
Projects/Games/Starcraft/: CMakeLists.txt
Projects/Games/Starcraft/include/: BattleCruser.hpp  BattleField.hpp  Carrier.hpp  Defines.hpp  Phoenix.hpp  ProtossAirShip.hpp  TeranAirShip.hpp  Viking.hpp
Projects/Games/Starcraft/src/: BattleCruser.cpp  BattleField.cpp  Carrier.cpp  Phoenix.cpp  ProtossAirShip.cpp  TeranAirShip.cpp  Viking.cpp  main.cpp
Projects/Games/Warcraft/: CMakeLists.txt
Projects/Games/Warcraft/include/: Archmage.hpp  DeathKnight.hpp  Defines.hpp  DrawRanger.hpp  HeroAction.hpp  HeroStorage.hpp  Heroes.hpp  Spell.hpp  SpellDistributer.hpp  SpellStorage.hpp
Projects/Games/Warcraft/src/: Archmage.cpp  DeathKnight.cpp  DrawRanger.cpp  HeroAction.cpp  HeroStorage.cpp  Heroes.cpp  SpellDistributer.cpp  SpellStorage.cpp  main.cpp
Projects/Games/cmake_helpers/: helpers_c.cmake
Projects/MicrochipFactory/Amp/data/: cnfg_amp.txt
Projects/MicrochipFactory/Amp/src/: amp.cpp  amp.hpp  inventoryItem.cpp  inventoryItem.hpp  main.cpp
Projects/MicrochipFactory/Bit/src/: main.cpp
Projects/MicrochipFactory/Bit/src/Printer/: Printer.cpp  Printer.hpp
Projects/MicrochipFactory/Bit/src/Repository/: Repository.cpp  Repository.hpp
Projects/MicrochipFactory/Ohm/src/: Order.cpp  Order.hpp  main.cpp  orderManager.cpp  orderManager.hpp
Projects/MicrochipFactory/SharedData/Connection/: Connection.cpp  Connection.hpp
Projects/MicrochipFactory/SharedData/ECInfo/: ECInfo.cpp  ECInfo.hpp
Projects/MicrochipFactory/SharedData/ElectronicComponent/: ElectronicComponent.cpp  ElectronicComponent.hpp
Projects/MicrochipFactory/SharedData/HardwareComponent/: hardwareComponent.cpp  hardwareComponent.hpp
Projects/MicrochipFactory/SharedData/Pin/: Pin.cpp  Pin.hpp
Projects/MicrochipFactory/Volt/src/: Volt.cpp  Volt.hpp  main.cpp
